yamls/hello-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-service
  labels:
    name: hello-service
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: hi.encero.encero.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hello-service
            port: 
              number: 8080
  tls:
    - hosts:
      - hi.encero.encero.xyz
      secretName: hello-service-tls
